css/style.css
@font-face {
    font-family: 'Roboto Medium';
    src: url('/fonts/Roboto-Medium.woff') format('woff');
    font-style: normal;
    font-weight: 400 500;
}

* {
    margin: 0;
    padding: 0;
}

section:target::before {
  content: "";
  display: block;
  height: 83px; /* fixed header height*/
}

header {
    width: 100%;
    height: 83px;
    margin: 0;
    padding: 0;
}
nav {
    width: 100%;
    margin: 0;
    padding: 0;
    background-color: #007650;
    position: fixed;
}

.container {
    margin: 0 auto;
    max-width: 1219px;
    padding: 0 55px;
}

.logo {
    float: left;
    padding: 19px 0;
}

.logo img {
    display: block;
    width: 184px;
}

.menu {
    float: right;
    padding: 26px 0 0 0;
}

.menu-item {
    display: inline-block;
    list-style-type: none;
}

.menu-item:not(:last-child):after {
    content: '|';
    color: #ffffff;
    margin-left: 6px;
    margin-right: 2px;
}

.menu-item a {
    text-decoration: none;
    color: #ffffff;
    font-family: "Roboto Medium", sans-serif;
    font-weight: 400;
    font-size: 18px;
}

.jumbotron {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 403px;
    background-color: #03151f;
    background-image: url(/img/bg/jumbotron.png);
    background-position: 50% 0;
    background-repeat: no-repeat;
    background-size: cover;
}

h1 {
    font-family: "Roboto Medium", sans-serif;
    font-size: 72px;
    color: #ffffff;
}

#problem {
    margin: 0;
    padding: 35px 0;
    height: 719px;
    background-color: #eee;
}

.subtitle {
    margin: 0;
    font-family: "Roboto Medium", sans-serif;
    font-size: 64px;
    color: #007765;
    text-align: center;
}

#problem p {
    margin-top: 10px;
    padding: 10px;
    font-family: "Roboto Medium", sans-serif;
    font-size: 34px;
    color: #000000;
}

.hero {
    margin: 0;
    padding: 0;
    height: 483px;
    background-color: #04204f;
}

.hero p {
    color: #ffffff;
}

